# LoLCalc

./: AutoAttack.cpp  AutoAttack.h  CMakeLists.txt  Champion.cpp  Champion.h  Entity.cpp  Entity.h  PreMitigationDamage.h  Stats.h  TargetedAbility.cpp  TargetedAbility.h  main.cpp
damage/: Ability.cpp  Ability.h  AoEAbility.cpp  AoEAbility.h  AutoAttack.cpp  AutoAttack.h  Damage.cpp  Damage.h  DoTAbility.cpp  DoTAbility.h  Effect.cpp  Effect.h  Multiplier.cpp  Multiplier.h  PreMitigationDamage.cpp  PreMitigationDamage.h  Stack.cpp  Stack.h  TargetedAbility.cpp  TargetedAbility.h
entities/: Champion.cpp  Champion.h  Entity.cpp  Entity.h  Stats.h
loadout/: Item.cpp  Item.h
structs/: EffectTrigger.h  EffectType.h  Ratio.h  TermStat.h
test/: testDamage.cpp  testDamage.h
